--- a/9.8/backend/package.json
+++ b/9.8/backend/package.json
@@ -13,6 +13,7 @@
   "author": "Junsheng Tan",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
@@ -21,6 +22,7 @@
     "typescript": "^4.2.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   }
 }
