--- a/9.16/frontend/package.json
+++ b/9.16/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/yup": "^0.29.11",
     "axios": "^0.19.0",
     "formik": "^2.0.6",
     "react": "^16.11.0",
